correct spacing in menu

--- a/Portals/_default/Skins/AgapeFR/css/menus.css
+++ b/Portals/_default/Skins/AgapeFR/css/menus.css
@@ -41,6 +41,7 @@
 
 .sidenav ul li ul { /*hide second level links*/
     display:none;
+    margin-top:10px;
 }
 
 .sidenav .menudrop { /*add menu arrows*/
